--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -35,11 +35,11 @@
         }
 
         .navbar-toggler {
-            border: none;
+            border: none ;
         }
 
         .navbar-toggler-icon {
-            color: white;
+            color: white ;
         }
 
         .navbar-text .fa-shopping-cart {
@@ -158,18 +158,7 @@
     </style>
 </head>
 <body>
-
-<!-- Navigation bar with social media icons -->
-<div class="w3-bar w3-black w3-hide-small">
-    <a href="https://www.facebook.com/uess5fine/ " class="w3-bar-item w3-button"><i class="fa-brands fa-facebook-f"></i></a>
-    <a href="https://www.instagram.com/h_thang_h/" class="w3-bar-item w3-button"><i class="fa-brands fa-instagram"></i></a>
-    <a href="#" class="w3-bar-item w3-button"><i class="fa-brands fa-snapchat"></i></a>
-    <a href="https://github.com/hahuythang159" class="w3-bar-item w3-button"><i class="fa-brands fa-github"></i></a>
-    <a href="#" class="w3-bar-item w3-button"><i class="fa-brands fa-twitter"></i></a>
-    <a href="https://www.linkedin.com/in/thangfrontend/" class="w3-bar-item w3-button"><i class="fa-brands fa-linkedin"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-search"></i></a>
-</div>
-<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-image: linear-gradient(135deg, #3498db, #e74c3c, #f39c12, #1abc9c);"> <!-- Gradient màu sắc pha trộn -->
     <div class="container-fluid">
         <a class="navbar-brand text-white" href="/home">Web bán sách</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -183,28 +172,22 @@
                 <li class="nav-item" sec:authorize="!hasAnyAuthority('ADMIN')">
                     <a class="nav-link text-white active" aria-current="page" href="/support/form">Hỗ trợ</a>
                 </li>
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
-                    <a class="nav-link text-white active" aria-current="page" href="/products">Sản phẩm</a>
-                </li>
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
-                    <a class="nav-link text-white active" aria-current="page" href="/categories">Thể loại</a>
-                </li>
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
-                    <a class="nav-link text-white active" aria-current="page" href="/users">Quản Lý tài khoản</a>
-                </li>
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
-                    <a class="nav-link text-white active" aria-current="page" href="/order">Quản Lý Đơn Hàng</a>
-                </li>
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
-                    <a class="nav-link text-white active" aria-current="page" href="https://sandbox.vnpayment.vn/merchantv2/Home/Dashboard.htm">Quản lý đơn hàng VNPAY</a>
-                </li>
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
-                    <a class="nav-link text-white active" aria-current="page" href="/products/sales">Quản lý Doanh Thu</a>
-                </li>
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
-                    <a class="nav-link text-white active" aria-current="page" href="/support/list">Quản lý Hỗ trợ</a>
-                </li>
+                <li class="nav-item dropdown" sec:authorize="hasAnyAuthority('ADMIN')">
+                    <a class="nav-link dropdown-toggle text-white active" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Admin Management
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="adminDropdown">
+                        <li><a class="dropdown-item" href="/products"><i class="fas fa-box"></i> Sản phẩm</a></li>
+                        <li><a class="dropdown-item" href="/categories"><i class="fas fa-list"></i> Thể loại</a></li>
+                        <li><a class="dropdown-item" href="/users"><i class="fas fa-user"></i> Quản Lý tài khoản</a></li>
+                        <li><a class="dropdown-item" href="/order"><i class="fas fa-clipboard"></i> Quản Lý Đơn Hàng</a></li>
+                        <li><a class="dropdown-item" href="https://sandbox.vnpayment.vn/merchantv2/Home/Dashboard.htm"><i class="fas fa-shopping-cart"></i> Quản lý đơn hàng VNPAY</a></li>
+                        <li><a class="dropdown-item" href="/products/sales"><i class="fas fa-chart-line"></i> Quản lý doanh thu</a></li>
+                        <li><a class="dropdown-item" href="/support/list"><i class="fas fa-life-ring"></i> Quản lý Hỗ trợ</a></li>
+                        <li><a class="dropdown-item" href="/voucher/list"><i class="fa-solid fa-ticket"></i> Quản lý Vouchers</a></li>
 
+                    </ul>
+                </li>
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
                 <li class="nav-item" sec:authorize="!hasAnyAuthority('ADMIN')">
@@ -213,9 +196,9 @@
                     </a>
                 </li>
                 <li class="nav-item d-flex align-items-center" sec:authorize="isAuthenticated()">
-                    <span class="navbar-text text-white">
-                        Xin chào <span sec:authentication="name" style="margin-right: 20px;"></span>
-                    </span>
+            <span class="navbar-text text-white">
+                Xin chào <span sec:authentication="name" style="margin-right: 20px;"></span>
+            </span>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <form th:action="@{/logout}" method="post">
